Solved bug
